--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -68,6 +68,10 @@
     <Compile Include="Migrations\202506031720332_Rollup_20250603.Designer.cs">
       <DependentUpon>202506031720332_Rollup_20250603.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202506042042400_AddCommunicationSaturationReport.cs" />
+    <Compile Include="Migrations\202506042042400_AddCommunicationSaturationReport.Designer.cs">
+      <DependentUpon>202506042042400_AddCommunicationSaturationReport.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.1\202504071505457_AddBluetoothBeaconIdentifiers.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.1\202504071505457_AddBluetoothBeaconIdentifiers.Designer.cs">
       <DependentUpon>202504071505457_AddBluetoothBeaconIdentifiers.cs</DependentUpon>
@@ -2662,6 +2666,9 @@
     <EmbeddedResource Include="Migrations\202506031720332_Rollup_20250603.resx">
       <DependentUpon>202506031720332_Rollup_20250603.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202506042042400_AddCommunicationSaturationReport.resx">
+      <DependentUpon>202506042042400_AddCommunicationSaturationReport.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.1\202504071505457_AddBluetoothBeaconIdentifiers.resx">
       <DependentUpon>202504071505457_AddBluetoothBeaconIdentifiers.cs</DependentUpon>
     </EmbeddedResource>
@@ -4623,6 +4630,7 @@
     <None Include="Migrations\Version 16.0\Version 1.16.7\202410101546296_AddDefaultCheckInAdvertisement_Image.jpg">
       <DependentUpon>202410101546296_AddDefaultCheckInAdvertisement.cs</DependentUpon>
     </None>
+    <Content Include="Migrations\202506042042400_AddCommunicationSaturationReport_spCommunication_SaturationReport.sql" />
     <Content Include="Migrations\Version 17.0\Version 17.0\202504021715459_AddVersionToCommunicationTemplateAndFixRecipientDetailsSP_spCommunicationRecipientDetails.sql" />
     <Content Include="Migrations\Version 17.0\Version 17.0\202503011520245_AddNewCommunicationPreviewPageAndPersonalizationSegments_spCommunicationRecipientDetails.sql" />
     <Content Include="Migrations\Version 17.0\Version 17.0\202501152224140_ImprovePeerNetworkRelationshipTrends_spPeerNetwork_UpdateFollowing.sql" />
