- Added blocks for listing and editing skill functions.

--- a/Rock.Blocks/Rock.Blocks.csproj
+++ b/Rock.Blocks/Rock.Blocks.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Communication\SmsConversations.cs" />
     <Compile Include="Communication\CommunicationTemplateDetail.cs" />
     <Compile Include="Core\AISkillDetail.cs" />
+    <Compile Include="Core\AISkillFunctionList.cs" />
     <Compile Include="Core\AISkillList.cs" />
     <Compile Include="Core\AutomationTriggerDetail.cs" />
     <Compile Include="Core\AutomationTriggerList.cs" />
