--- a/Rock.ViewModels/Rock.ViewModels.csproj
+++ b/Rock.ViewModels/Rock.ViewModels.csproj
@@ -163,6 +163,8 @@
     <Compile Include="Blocks\Communication\CommunicationTemplateDetail\CommunicationTemplateDetailInitializationBox.cs" />
     <Compile Include="Blocks\Core\AISkillDetail\AISkillBag.cs" />
     <Compile Include="Blocks\Core\AISkillDetail\AISkillDetailOptionsBag.cs" />
+    <Compile Include="Blocks\Core\AISkillFunctionList\AISkillFunctionBag.cs" />
+    <Compile Include="Blocks\Core\AISkillFunctionList\AISkillFunctionListOptionsBag.cs" />
     <Compile Include="Blocks\Core\AISkillList\AISkillListOptionsBag.cs" />
     <Compile Include="Blocks\Core\AutomationTriggerDetail\AutomationEventBag.cs" />
     <Compile Include="Blocks\Core\AutomationTriggerDetail\AutomationTriggerBag.cs" />
