--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -709,6 +709,7 @@
     <Compile Include="AI\Agent\IChatAgent.cs" />
     <Compile Include="AI\Agent\IChatAgentBuilder.cs" />
     <Compile Include="AI\Agent\IAgentSkill.cs" />
+    <Compile Include="AI\Agent\PromptInformationSettings.cs" />
     <Compile Include="AI\Agent\SkillConfiguration.cs" />
     <Compile Include="AI\Agent\UsageMetric.cs" />
     <Compile Include="AI\Automations\AIAutomation.cs" />
