--- a/Rock.Blocks/Rock.Blocks.csproj
+++ b/Rock.Blocks/Rock.Blocks.csproj
@@ -164,6 +164,8 @@
     <Compile Include="Cms\LogSettings.cs" />
     <Compile Include="Communication\SmsConversations.cs" />
     <Compile Include="Communication\CommunicationTemplateDetail.cs" />
+    <Compile Include="Core\AIAgentDetail.cs" />
+    <Compile Include="Core\AIAgentList.cs" />
     <Compile Include="Core\AISkillDetail.cs" />
     <Compile Include="Core\AISkillFunctionList.cs" />
     <Compile Include="Core\AISkillList.cs" />
