- Update the data view filters to use a new Obsidian-compatible means of updating based on page parameters.

--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -1904,6 +1904,7 @@
     <Compile Include="RealTime\Topics\TestCommunicationTransportTopic.cs" />
     <Compile Include="Reporting\DataFilter\BaseCampusesFilter.cs" />
     <Compile Include="Reporting\DataFilter\BaseCampusFilter.cs" />
+    <Compile Include="Reporting\DataFilter\IUpdateSelectionFromRockRequestContext.cs" />
     <Compile Include="Reporting\DataFilter\Person\StreakDataViewFilter.cs" />
     <Compile Include="Reporting\FieldFilterPublicConverter.cs" />
     <Compile Include="Reporting\FieldFilterExpressionBuilder.cs" />
