- Added Role to Agent's and updated function UI to hide prompt details unless type is AiPrompt.

--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -704,6 +704,7 @@
     <Compile Include="AI\Agent\AgentProviderComponent.cs" />
     <Compile Include="AI\Agent\AgentProviderContainer.cs" />
     <Compile Include="AI\Agent\AgentRequestContext.cs" />
+    <Compile Include="AI\Agent\AgentSettings.cs" />
     <Compile Include="AI\Agent\ContextAnchor.cs" />
     <Compile Include="AI\Agent\IAgentProvider.cs" />
     <Compile Include="AI\Agent\IChatAgent.cs" />
