- Added models for agent session history.

--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -68,6 +68,10 @@
     <Compile Include="Migrations\202506032139319_TemporaryAddAgentTables.Designer.cs">
       <DependentUpon>202506032139319_TemporaryAddAgentTables.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202506102152281_TempAddAgentSessionTables.cs" />
+    <Compile Include="Migrations\202506102152281_TempAddAgentSessionTables.Designer.cs">
+      <DependentUpon>202506102152281_TempAddAgentSessionTables.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.1\202504071505457_AddBluetoothBeaconIdentifiers.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.1\202504071505457_AddBluetoothBeaconIdentifiers.Designer.cs">
       <DependentUpon>202504071505457_AddBluetoothBeaconIdentifiers.cs</DependentUpon>
@@ -2661,6 +2665,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202506032139319_TemporaryAddAgentTables.resx">
       <DependentUpon>202506032139319_TemporaryAddAgentTables.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202506102152281_TempAddAgentSessionTables.resx">
+      <DependentUpon>202506102152281_TempAddAgentSessionTables.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.1\202504071505457_AddBluetoothBeaconIdentifiers.resx">
       <DependentUpon>202504071505457_AddBluetoothBeaconIdentifiers.cs</DependentUpon>
