--- a/Rock.AI.Agent/packages.config
+++ b/Rock.AI.Agent/packages.config
@@ -2,8 +2,10 @@
 <packages>
   <package id="Azure.AI.OpenAI" version="2.2.0-beta.4" targetFramework="net472" />
   <package id="Azure.Core" version="1.44.1" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.27.1" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.5" targetFramework="net472" />
-  <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net472" />
+  <package id="Microsoft.Bcl.HashCode" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.Memory" version="9.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.Numerics" version="9.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.AI" version="9.5.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.AI.Abstractions" version="9.5.0" targetFramework="net472" />
@@ -14,6 +16,8 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.3" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.VectorData.Abstractions" version="9.5.0" targetFramework="net472" />
+  <package id="Microsoft.ML.Tokenizers" version="1.0.2" targetFramework="net472" />
+  <package id="Microsoft.ML.Tokenizers.Data.O200kBase" version="1.0.2" targetFramework="net472" />
   <package id="Microsoft.SemanticKernel" version="1.54.0" targetFramework="net472" />
   <package id="Microsoft.SemanticKernel.Abstractions" version="1.54.0" targetFramework="net472" />
   <package id="Microsoft.SemanticKernel.Connectors.AzureOpenAI" version="1.54.0" targetFramework="net472" />
