- Fixed Integration Unit Tests not able to create database from csproj conversion.

--- a/Rock.Tests.Shared/Rock.Tests.Shared.csproj
+++ b/Rock.Tests.Shared/Rock.Tests.Shared.csproj
@@ -42,4 +42,10 @@
     <Reference Include="System.Web" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="..\Documentation\sampledata_1_14_1.xml">
+      <Link>TestFramework\sampledata_1_14_1.xml</Link>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
