--- a/Rock.Tests/Rock.Tests.csproj
+++ b/Rock.Tests/Rock.Tests.csproj
@@ -227,6 +227,7 @@
       <Link>AssemblySharedInfo.cs</Link>
     </Compile>
     <Compile Include="Lava\Helpers\LavaAppendWatchesHelperTests.cs" />
+    <Compile Include="Model\AnalyticsSourceDateTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Blocks\Mobile\Cms\DailyChallengeEntryTests.cs" />
     <Compile Include="CheckIn\v2\CheckInMockDatabase.cs" />
