--- a/Rock.JavaScript.Obsidian/Framework/Utility/tsconfig.json
+++ b/Rock.JavaScript.Obsidian/Framework/Utility/tsconfig.json
@@ -7,6 +7,7 @@
   "include": [ "./*.ts" ],
   "references": [
     { "path": "../Enums" },
-    { "path": "../Libs" }
+    { "path": "../Libs" },
+    { "path": "../ViewModels" }
   ]
 }
